--- a/android/BoilingPoint_Mobi/BoilingPoint_Mobi/www/index.html
+++ b/android/BoilingPoint_Mobi/BoilingPoint_Mobi/www/index.html
@@ -12,13 +12,32 @@
 
     <!-- BoilingPointMobi references -->
     <link href="css/index.css" rel="stylesheet" />
+
+    
 </head>
 <body>
-    <p>Hello, your application is ready!</p>
+    <div ng-app="kettleApp" ng-controller="kettleController">
+        <p><button class="myButton" ng-click="getKettleStatus()">Refresh</button></p> 
+        <p><span ng-bind="statusTemp"></span></p>
+        <p><span ng-bind="errorResult"></span></p>
+    </div>
 
     <!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/appBundle.js"></script>
+
+    <!--<script src="../scripts/angular.min.js"></script>-->
+    <script src="scripts/angular.min.js"></script>
+
+    <script src="scripts/Model/data.js"></script>
+    <script src="scripts/Model/status.js"></script>
+    <script src="scripts/App/kettle.js"></script>
+    <script src="scripts/Service/kettleService.js"></script>    
+    <script src="scripts/Controller/kettleController.js"></script>
+    
+
+    <!-- Init the angular app -->
+    <script type="text/javascript">kettleApp.initialize();</script>
 </body>
 </html>
