--- a/android/BoilingPoint_Mobi/BoilingPoint_Mobi/www/index.html
+++ b/android/BoilingPoint_Mobi/BoilingPoint_Mobi/www/index.html
@@ -63,6 +63,10 @@
         <input class="btn btn-danger btn-lg" type="button" value="Turn Kettle Off" ng-click="turnKettleOff()" />-->
 
         <p><span ng-bind="errorResult"></span></p>
+
+        <br />
+        <br />
+        <pre></pre>
     </div>
 
     <!-- Cordova reference, this is added to your app when it's built. -->
@@ -72,6 +76,16 @@
 
     <!--<script src="../scripts/angular.min.js"></script>-->
     <script src="scripts/angular.min.js"></script>
+
+    <script>
+        angular
+   .module('kettleApp', ['ngMockE2E'])
+   .run(['$httpBackend', function ($httpBackend) {
+       $httpBackend
+         .whenGET(/^\/kettle\/status\/.+/)
+         .respond({ "Type": "2", "Data": { "On": "true", "Temp": "35", "Level": "50%" } });
+   }]);
+    </script>
 
     <script src="scripts/Model/data.js"></script>
     <script src="scripts/Model/status.js"></script>
