--- a/android/BoilingPoint_Ionic/www/index.html
+++ b/android/BoilingPoint_Ionic/www/index.html
@@ -1,35 +1,77 @@
 ﻿<!DOCTYPE html>
 <html>
-  <head>
-      <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+<head>
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">-->
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <script src="js/Model/data.js"></script>
+    <script src="js/Model/status.js"></script>
+    <script src="js/Service/kettleService.js"></script>
+    <script src="js/Controller/kettleController.js"></script>
+</head>
+<body ng-app="kettleApp">
+    <div ng-controller="kettleController">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+        <div class="page-header">
+            <h1><span class="glyphicon glyphicon-fire"></span><span> BoilingPoint</span></h1>
+        </div>
+
+        <div class="form-horizontal">
+
+            <div class="form-group form-group-sm">
+                <label class="col-xs-4 control-label">Status</label>
+                <div class="col-xs-8">
+                    <span class="form-control-static" ng-bind="status.data.on"></span>
+                </div>
+            </div>
+
+            <div class="form-group form-group-sm">
+                <label class="col-xs-4 control-label">Temperature</label>
+                <div class="col-xs-8">
+                    <span class="form-control-static" ng-bind="status.data.temp"></span>
+                </div>
+            </div>
+
+            <div class="form-group form-group-sm">
+                <label class="col-xs-4 control-label">Level</label>
+                <div class="col-xs-8">
+                    <span class="form-control-static" ng-bind="status.data.level"></span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 btn-group btn-toggle">
+                    <button id="toggleOnButton" class="col-xs-6 btn btn-lg btn-default" ng-click="toggleOnOff()">ON</button>
+                    <button class="col-xs-6 btn btn-lg btn-info active" ng-click="toggleOnOff()">OFF</button>
+                </div>
+            </div>
+        </div>
+
+        <!--<input class="btn btn-success btn-lg" type="button" value="Turn Kettle On" ng-click="turnKettleOn()" />
+        <input class="btn btn-danger btn-lg" type="button" value="Turn Kettle Off" ng-click="turnKettleOff()" />-->
+
+        <p><span ng-bind="errorResult"></span></p>
+
+        <br />
+        <br />
+        <pre></pre>
+    </div>
+    <!--<script type="text/javascript">kettleApp.initialize();</script>-->
+</body>
 </html>
