--- a/android/BoilingPoint_Ionic/www/index.html
+++ b/android/BoilingPoint_Ionic/www/index.html
@@ -70,7 +70,7 @@
 
         <br />
         <br />
-        <pre></pre>
+        <pre id="debug"></pre>
     </div>
     <!--<script type="text/javascript">kettleApp.initialize();</script>-->
 </body>
