--- a/android/BoilingPoint_Ionic/www/index.html
+++ b/android/BoilingPoint_Ionic/www/index.html
@@ -57,6 +57,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col col-50 temp-text">
+                            <span>{{status.data.temp}}</span>
+                        </div>
+                        <div class="col col-50 level-text">
+                            <span>{{status.data.level}}%</span>
+                        </div>
+                    </div>
                 </label>
             </div>
 
